<?xml version="1.0"?>
<package format="3">
  <name>leo_teleop</name>
  <version>0.0.0</version>
  <description>Basic teleop node for Leo Rover</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>